--- a/Phase02/backend/pyproject.toml
+++ b/Phase02/backend/pyproject.toml
@@ -23,5 +23,8 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
 
-[tool.uv]
-dev-dependencies = []
+[project.scripts]
+uvicorn = "uvicorn.main:main"
+
+[dependency-groups]
+dev = []
